fix: prevent site credit wrapping

--- a/src/stylesheets/components/_site-credit.sass
+++ b/src/stylesheets/components/_site-credit.sass
@@ -2,6 +2,7 @@
   height: $baseline
   pointer-events: none
   position: relative
+  white-space: nowrap
 
   &__title,
   &__content
